<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_mode">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="android_practicum_course_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">dima-ratov@mail.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="album_cover">Обложка альбома</string>
    <string name="track_activate">Кнопка перехода на трек</string>
    <string name="connectivity_issue">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="duration">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="release_date">Год</string>
    <string name="genre_name">Жанр</string>
    <string name="country">Страна</string>
    <string name="default_play_time">00:00</string>
    <string name="ClearHistory">Очистить историю</string>
    <string name="SearchMessage">Вы искали</string>
    <string name="emptyMediateka">Ваша медиатека пуста</string>
    <string name="emptyPlaylist">Вы не создали \n ни одного плейлиста</string>
    <string name="createPlayList">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="name_playlist">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="playlist_name_created">Плейлист %s создан</string>
    <string name="required_field">Обязательное поле</string>
    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_button_cancel">Отмена</string>
    <string name="dialog_button_exit">Завершить</string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="already_added_to_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="new_playlist">Новый плейлист</string>
    <plurals name="track_count">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
</resources>