<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Main_LinearLayoutStyle">

    <TextView
        style="@style/Main_TextViewStyle"
        android:text="@string/app_name"
        android:fontFamily="@font/ys_display_medium"/>

    <Button
        android:layout_marginTop="24dp"
        style="@style/Main_ButtonStyle"
        app:icon="@drawable/search"
        android:text="@string/search"
        android:id="@+id/search" />

    <Button
        style="@style/Main_ButtonStyle"
        app:icon="@drawable/mediateka"
        android:text="@string/mediateka"
        android:id="@+id/mediateka" />

    <Button
        style="@style/Main_ButtonStyle"
        app:icon="@drawable/settings"
        android:text="@string/settings"
        android:id="@+id/settings" />

</LinearLayout>