<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <FrameLayout
        style="@style/Settings_FrameLayoutStyle">
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/settings"
            android:layout_height="@dimen/settings"
            android:backgroundTint="@color/white"
            app:icon="@drawable/vector"
            app:iconGravity="textStart"
            app:iconTint="@color/black">
        </Button>
        <TextView
            style="@style/Settings_TextViewStyle"
            android:layout_height="@dimen/settings"
            android:paddingStart="@dimen/settings"
            android:layout_marginStart="4dp"
            android:text="@string/settings"
            android:textSize="22sp"
            android:fontFamily="@font/ys_display_medium"
            />
    </FrameLayout>

    <FrameLayout
        style="@style/Settings_FrameLayoutStyle">
        <TextView

            style="@style/Settings_TextViewStyle"
            android:text="@string/dark_mode" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="6dp"
            android:layout_gravity="center|end"
            android:gravity="right|center"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/share"
        style="@style/Settings_FrameLayoutStyle">
        <TextView
            style="@style/Settings_TextViewStyle"
            android:text="@string/share" />
        <ImageView
            style="@style/Settings_ImageStyle"
            android:src="@drawable/share"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/support"
        style="@style/Settings_FrameLayoutStyle">

        <TextView
            style="@style/Settings_TextViewStyle"
            android:text="@string/support" />
        <ImageView
            style="@style/Settings_ImageStyle"
            android:src="@drawable/support"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/agreement"
        style="@style/Settings_FrameLayoutStyle">

        <TextView
            style="@style/Settings_TextViewStyle"
            android:text="@string/agreement" />
        <ImageView
            style="@style/Settings_ImageStyle"
            android:src="@drawable/arrow_forfard"
            />
    </FrameLayout>

</LinearLayout>