<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".playlist.presentation.CreatePlaylistFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuidelineIn24Dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuidelineIn24Dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuidelineIn16Dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuidelineIn16Dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createPlaylist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/selector_create_button"
        android:clickable="true"
        android:enabled="false"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightGuidelineIn16Dp"
        app:layout_constraintStart_toStartOf="@id/leftGuidelineIn16Dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description"
        style="@style/NewPlaylistTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="@id/rightGuidelineIn16Dp"
        app:layout_constraintStart_toStartOf="@id/leftGuidelineIn16Dp"
        app:layout_constraintTop_toBottomOf="@id/namePlaylist">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDescription"
            style="@style/NewPlaylistTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/namePlaylist"
        style="@style/NewPlaylistTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name_playlist"
        app:layout_constraintBottom_toTopOf="@id/description"
        app:layout_constraintEnd_toEndOf="@id/rightGuidelineIn16Dp"
        app:layout_constraintStart_toStartOf="@id/leftGuidelineIn16Dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            style="@style/NewPlaylistTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivCoverAlbum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="32dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/ImageRounded8dpStyle"
        android:src="@drawable/add_playlist_rectangle"
        app:layout_constraintBottom_toTopOf="@id/namePlaylist"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/rightGuidelineIn24Dp"
        app:layout_constraintStart_toStartOf="@id/leftGuidelineIn24Dp"
        app:layout_constraintTop_toBottomOf="@id/arrowBack" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/arrowBack"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/leftGuidelineIn16Dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/vector"
        app:navigationIconTint="?attr/colorPrimaryVariant"
        app:title="@string/new_playlist"
        app:titleTextAppearance="@style/Header" />

</androidx.constraintlayout.widget.ConstraintLayout>