<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.presentation.PlayerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        android:fillViewport="true"
        tools:context=".player.presentation.PlayerActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/backgroundColor"
            tools:context=".player.presentation.PlayerActivity">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftGuidelineIn24Dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightGuidelineIn24Dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftGuidelineIn16Dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightGuidelineIn16Dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <TextView
                android:id="@+id/tvCountry"
                style="@style/TrackInfoTitleStyleInPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:text="@string/country"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/leftGuidelineIn16Dp" />

            <TextView
                android:id="@+id/tvGenre"
                style="@style/TrackInfoTitleStyleInPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre_name"
                app:layout_constraintBottom_toTopOf="@id/tvCountry"
                app:layout_constraintStart_toStartOf="@id/leftGuidelineIn16Dp" />

            <TextView
                android:id="@+id/tvYear"
                style="@style/TrackInfoTitleStyleInPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                app:layout_constraintBottom_toTopOf="@id/tvGenre"
                app:layout_constraintStart_toStartOf="@id/leftGuidelineIn16Dp" />

            <TextView
                android:id="@+id/tvAlbum"
                style="@style/TrackInfoTitleStyleInPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album_cover"
                app:layout_constraintBottom_toTopOf="@id/tvYear"
                app:layout_constraintStart_toStartOf="@id/leftGuidelineIn16Dp" />

            <TextView
                android:id="@+id/tvDuration"
                style="@style/TrackInfoTitleStyleInPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/duration"
                app:layout_constraintBottom_toTopOf="@id/tvAlbum"
                app:layout_constraintStart_toStartOf="@id/leftGuidelineIn16Dp" />

            <TextView
                android:id="@+id/tvCountryName"
                style="@style/TrackInfoValueStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                app:layout_constraintBaseline_toBaselineOf="@id/tvCountry"
                app:layout_constraintBottom_toBottomOf="@id/tvCountry"
                app:layout_constraintEnd_toEndOf="@id/rightGuidelineIn16Dp"
                app:layout_constraintStart_toEndOf="@id/tvCountry"
                tools:text="Великобритания" />

            <TextView
                android:id="@+id/tvGenreName"
                style="@style/TrackInfoValueStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/tvGenre"
                app:layout_constraintBottom_toTopOf="@id/tvCountryName"
                app:layout_constraintEnd_toEndOf="@id/rightGuidelineIn16Dp"
                app:layout_constraintStart_toEndOf="@id/tvGenre"
                tools:text="Rock" />

            <TextView
                android:id="@+id/tvYearValue"
                style="@style/TrackInfoValueStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/tvYear"
                app:layout_constraintBottom_toTopOf="@id/tvGenreName"
                app:layout_constraintEnd_toEndOf="@id/rightGuidelineIn16Dp"
                app:layout_constraintStart_toEndOf="@id/tvYear"
                tools:text="1965" />

            <TextView
                android:id="@+id/tvAlbumName"
                style="@style/TrackInfoValueStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="1"
                app:layout_constrainedWidth="true"
                app:layout_constraintBaseline_toBaselineOf="@id/tvAlbum"
                app:layout_constraintBottom_toTopOf="@id/tvYearValue"
                app:layout_constraintEnd_toEndOf="@id/rightGuidelineIn16Dp"
                app:layout_constraintStart_toEndOf="@id/tvAlbum"
                tools:text="Yesterday (Remastered 2009)" />

            <TextView
                android:id="@+id/tvTrackDuration"
                style="@style/TrackInfoValueStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/tvDuration"
                app:layout_constraintBottom_toTopOf="@id/tvAlbumName"
                app:layout_constraintEnd_toEndOf="@id/rightGuidelineIn16Dp"
                app:layout_constraintStart_toEndOf="@id/tvDuration"
                tools:text="5:35" />

            <TextView
                android:id="@+id/tvTrackTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:textColor="?attr/colorPrimaryVariant"
                android:textFontWeight="500"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/tvDuration"
                app:layout_constraintEnd_toEndOf="@id/rightGuidelineIn24Dp"
                app:layout_constraintStart_toStartOf="@id/leftGuidelineIn24Dp"
                tools:text="0:30" />

            <ImageButton
                android:id="@+id/ibAddToAlbum"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:src="@drawable/playlist"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/ibPlayButton"
                app:layout_constraintEnd_toStartOf="@id/ibPlayButton"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@id/leftGuidelineIn24Dp"
                app:layout_constraintTop_toTopOf="@id/ibPlayButton" />

            <ImageButton
                android:id="@+id/ibPlayButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@null"
                android:src="@drawable/play"
                app:layout_constraintBottom_toTopOf="@id/tvTrackTime"
                app:layout_constraintEnd_toStartOf="@id/ibLikeTrack"
                app:layout_constraintStart_toEndOf="@id/ibAddToAlbum" />

            <ImageButton
                android:id="@+id/ibLikeTrack"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:background="@drawable/rounded_button_background"
                android:src="@drawable/liked"
                app:layout_constraintBottom_toBottomOf="@id/ibPlayButton"
                app:layout_constraintEnd_toEndOf="@id/rightGuidelineIn24Dp"
                app:layout_constraintStart_toEndOf="@id/ibPlayButton"
                app:layout_constraintTop_toTopOf="@id/ibPlayButton" />

            <TextView
                android:id="@+id/tvArtistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/ys_display_medium"
                android:textColor="?attr/colorPrimaryVariant"
                android:textFontWeight="400"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/ibPlayButton"
                app:layout_constraintStart_toStartOf="@id/leftGuidelineIn24Dp"
                tools:text="The Beatles" />

            <TextView
                android:id="@+id/tvHeadTrackName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/ys_display_medium"
                android:textColor="?attr/colorPrimaryVariant"
                android:textFontWeight="400"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@id/tvArtistName"
                app:layout_constraintEnd_toEndOf="@id/rightGuidelineIn24Dp"
                app:layout_constraintStart_toStartOf="@id/leftGuidelineIn24Dp"
                tools:text="Yesterday (Remastered 2009)" />

            <ImageView
                android:id="@+id/ivCover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="46dp"
                android:layout_marginBottom="24dp"
                android:background="?attr/colorPrimary"
                android:scaleType="fitCenter"
                android:src="@drawable/olaceholder_312px"
                app:layout_constraintBottom_toTopOf="@id/tvHeadTrackName"
                app:layout_constraintEnd_toEndOf="@id/rightGuidelineIn24Dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/leftGuidelineIn24Dp"
                app:layout_constraintTop_toBottomOf="@+id/arrowBack"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/arrowBack"
                style="@style/HeaderArrowBack"
                android:layout_marginStart="4dp"
                android:background="@null"
                android:clickable="true"
                app:layout_constraintStart_toStartOf="@id/leftGuidelineIn16Dp"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:behavior_hideable="true"
        android:background="@drawable/rectangle_bottom_sheet"
        app:behavior_peekHeight="505dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:id="@+id/ivRectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_button_background" />

        <TextView
            android:id="@+id/tvAddToPlaylist"
            style="@style/ModalHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="28dp"
            android:text="@string/add_to_playlist" />

        <Button
            android:id="@+id/btnNewPlaylist"
            style="@style/PlaceholderActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_playlist" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_playlists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/playlist_view_bottom_sheet" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>